Reorg and bug fix
- Introduced Network.Poloniex.Types
- The 'currencyPair' field is required for 'returnOrderBook'

--- a/poloniex-api.cabal
+++ b/poloniex-api.cabal
@@ -19,6 +19,7 @@ library
     Network.Poloniex
     , Network.Poloniex.Api
     , Network.Poloniex.Push
+    , Network.Poloniex.Types
   build-depends:       
     aeson
     , base >= 4.7 && < 5
